--- a/phosh/feedbackd/PKGBUILD
+++ b/phosh/feedbackd/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=feedbackd
 pkgdesc="A daemon to provide haptic (and later more) feedback on events"
-pkgver=0.0.0+git20220208.r0.g74b178a
+pkgver=0.0.0+git20220520.r0.g17c1c2a
 pkgrel=1
 _arches=all
 arch=(
@@ -20,8 +20,8 @@ makedepends=(
     meson
     vala
 )
-_commit=74b178a363f1e0e4b84309f2a1b1c1c41bf97248
-_fbdthemes_commit=aeffda0232aaa1738a883b2f3089700217fd877c
+_commit=17c1c2aa24dbf3b9829bcfc3db38f633053c52f9
+_fbdthemes_commit=8491037913537d31d663f1263d336f5adcae9541
 source=(
     "git+$url#commit=$_commit"
     "git+https://source.puri.sm/Librem5/feedbackd-device-themes#commit=$_fbdthemes_commit"
