--- a/phosh/phosh/PKGBUILD
+++ b/phosh/phosh/PKGBUILD
@@ -1,8 +1,8 @@
 _mode=host
 pkgname=phosh
 pkgdesc="The phosh Shell"
-pkgver=0.17.0.r0.ge9651c72
-pkgrel=2
+pkgver=0.20.0.r0.g5fe9aea7
+pkgrel=1
 _arches=all
 arch=(
     x86_64
@@ -32,7 +32,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=e9651c72a6c3033597d40b135c230262a2bf4cb6
+_commit=5fe9aea775b9198eed25fb3b3bcd9827ae40a785
 source=(
     "git+$url#commit=$_commit"
     pam_phosh
@@ -50,7 +50,7 @@ pkgver() {
 }
 
 build() {
-    arch-meson ${pkgname} output -Dtests=false -Dphoc_tests=disabled -Dsystemd=true
+    arch-meson ${pkgname} output --libexecdir "lib/$pkgname" -Dtests=false -Dphoc_tests=disabled -Dsystemd=true
     ninja -C output
 }
 
