--- a/phosh/phosh/PKGBUILD
+++ b/phosh/phosh/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh
 pkgdesc="The phosh Shell"
-pkgver=0.20.0.r0.g5fe9aea7
+pkgver=0.21.1.r0.gc779ffa8
 pkgrel=1
 _arches=all
 arch=(
@@ -23,6 +23,7 @@ depends=(
     libnm
     phoc
     callaudiod
+    evolution-data-server
 )
 optdepends=(
     "firefox-wayland-config: Use Wayland by default for Firefox"
@@ -32,7 +33,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=5fe9aea775b9198eed25fb3b3bcd9827ae40a785
+_commit=c779ffa8ecf1a942a695bca4418b09c46bbe0d9f
 source=(
     "git+$url#commit=$_commit"
     pam_phosh
