.gitlab-ci: Also check for modified files in check_formatting to catch outdated metadata early

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ check_formatting:
     - packages
   script:
     - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages check all'
+    - 'cd ./pkgbuilds && ./.gitlab/check_modified.sh'
 
 .build:
   stage: build
