--- a/phosh/feedbackd/PKGBUILD
+++ b/phosh/feedbackd/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=feedbackd
 pkgdesc="A daemon to provide haptic (and later more) feedback on events"
-pkgver=0.0.0+git20220520.r0.g17c1c2a
+pkgver=0.0.1.r0.g99c12e7
 pkgrel=1
 _arches=all
 arch=(
@@ -20,7 +20,7 @@ makedepends=(
     meson
     vala
 )
-_commit=17c1c2aa24dbf3b9829bcfc3db38f633053c52f9
+_commit=99c12e77d830ac8b0316c032bddd3ef082c66c72
 _fbdthemes_commit=8491037913537d31d663f1263d336f5adcae9541
 source=(
     "git+$url#commit=$_commit"
