--- a/phosh/phosh-mobile-settings/PKGBUILD
+++ b/phosh/phosh-mobile-settings/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh-mobile-settings
 pkgdesc="A settings app for mobile specific things"
-pkgver=0.21.1.r0.gd4c4417
+pkgver=0.22.0.r0.g810c3ab
 pkgrel=1
 _arches=all
 arch=(
@@ -21,7 +21,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=d4c44175294b549dbc3329af38ef64e08936c520
+_commit=810c3abaac23210c88f9da8a9d3cd00a4768f730
 source=(
     "git+https://gitlab.gnome.org/guidog/phosh-mobile-settings.git#commit=$_commit"
 )
