device/device-sdm845-xiaomi-beryllium: add q6voiced.conf

--- a/device/device-sdm845-xiaomi-beryllium/PKGBUILD
+++ b/device/device-sdm845-xiaomi-beryllium/PKGBUILD
@@ -6,21 +6,24 @@ pkgname=(
     device-sdm845-xiaomi-beryllium-ebbg
     device-sdm845-xiaomi-beryllium-tianma
 )
-pkgver=0.4
-pkgrel=2
+pkgver=0.5
+pkgrel=1
 _arches=specific
 arch=(aarch64)
 license=(MIT)
 makedepends=(devicepkg-helpers)
 _commit=1770b37b601337b256258fcfbc18e53f895c9d81
+_commit_conf=2decd7eb54475fed90a6d55be9d1885642a26ecb #deviceinfo commit has different incompatible version
 source=(
     "https://gitlab.com/postmarketOS/pmaports/-/raw/${_commit}/device/community/device-xiaomi-beryllium/deviceinfo"
+    "https://gitlab.com/postmarketOS/pmaports/-/raw/${_commit_conf}/device/community/device-xiaomi-beryllium/q6voiced.conf"
     xiaomi-beryllium.conf
     machine-info
     rootston.ini
 )
 sha256sums=(
     5c22068d2e45fcb72dcd42c795acb98cae9c329f86b4d7567c7b08e3a67135cb
+    21b8395e7729c785c0446be5d88e52873b0fa46812111b91bcd5c3af7dde24da
     6591192b2696f0b6594e5c8724075752158eab2ea537d77c4d9bc3ead61f305e
     7729d6a89258b470cadd48cfbc704bab7791501c53f45f50737dea6b441a3171
     3ecab866e26f244bd0e449f6b56b109f362aed3fa6c95738428b222cc5766cd6
@@ -34,6 +37,7 @@ package_device-sdm845-xiaomi-beryllium-common() {
     install -Dm644 "$srcdir"/xiaomi-beryllium.conf "$pkgdir"/etc/kupfer/mkinitcpio.conf.d/xiaomi-beryllium.conf
     install -Dm644 "$srcdir"/machine-info "$pkgdir"/etc/machine-info
     install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
+    install -Dm644 "$srcdir"/q6voiced.conf "$pkgdir"/etc/conf.d/q6voiced
 }
 
 package_device() {
